--- a/ob_application/app.json
+++ b/ob_application/app.json
@@ -18,8 +18,8 @@
         "foregroundImage": "./assets/images/icon.png",
         "backgroundColor": "#ffffff"
       },
-
-      "package": "com.faite.obcakes"
+      "package": "com.faite.obcakes",
+      "useCleartextTraffic": true  
     },
     "web": {
       "bundler": "metro",
@@ -42,7 +42,6 @@
     "experiments": {
       "typedRoutes": true
     },
-
     "extra": {
       "router": {
         "origin": false
